--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
 
   <!-- HEADER -->
-  <header class="header">
-    <div class="header-inner">
-      <h1 class="title">Balance de Caja</h1>
-      <img src="logo.png" class="logo" alt="Logo Balance de Caja" />
-    </div>
-  </header>
+<header class="header">
+  <div class="header-inner">
+    <img src="logo.png" class="logo" alt="Logo" />
+    <h1 class="title">Balance de Caja</h1>
+  </div>
+</header>
 
   <!-- CONTENIDO -->
   <main class="container">
