--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
   <script type="module" src="app.js"></script>
 
   <script>
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("sw.js").catch(()=>{});
-    }
-  </script>
+  if ("serviceWorker" in navigator && location.protocol === "https:") {
+    navigator.serviceWorker.register("sw.js").catch(()=>{});
+  }
+</script>
 
 </body>
 </html>
