checkbox por defecto desactivado

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <section class="section-box">
   <h2>Registrar Movimiento</h2>
 
-  <!-- ✔️ CHECKBOX EN SU PROPIA FILA -->
-  <label class="check-label" style="display:flex; align-items:center; gap:8px; margin-bottom:10px;">
-    <input type="checkbox" id="chkWhatsapp" checked>
-    Enviar registro por WhatsApp
-  </label>
+<!-- ✔️ CHECKBOX EN SU PROPIA FILA -->
+<label class="check-label" style="display:flex; align-items:center; gap:8px; margin-bottom:10px;">
+  <input type="checkbox" id="chkWhatsapp">
+  Enviar registro por WhatsApp
+</label>
 
   <div class="form-row">
     <div class="inputs-col">
