--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" href="logo.png" />
-
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- HEADER -->
+<!-- HEADER -->
 <header class="header">
   <div class="header-inner">
     <img src="logo.png" class="logo" alt="Logo" />
@@ -20,57 +19,66 @@
   </div>
 </header>
 
-  <!-- CONTENIDO -->
-  <main class="container">
+<main class="container">
 
-    <section class="saldo-card">
-      <h2>Saldo actual</h2>
-      <p id="saldo" class="saldo-valor saldo-positivo">$0</p>
-    </section>
+  <!-- SALDO -->
+  <section class="saldo-card">
+    <h2>Saldo actual</h2>
+    <p id="saldo" class="saldo-valor saldo-positivo">$0</p>
+  </section>
 
-    <section class="section-box">
-  <h2>Registrar Movimiento</h2>
+  <!-- REGISTRO -->
+  <section class="section-box">
+    <h2>Registrar Movimiento</h2>
 
-<!-- ✔️ CHECKBOX EN SU PROPIA FILA -->
-<label class="check-label" style="display:flex; align-items:center; gap:8px; margin-bottom:10px;">
-  <input type="checkbox" id="chkWhatsapp">
-  Enviar registro por WhatsApp
-</label>
+    <!-- CHECKBOX WHATSAPP (DESMARCADO POR DEFECTO) -->
+    <label class="check-label">
+      <input type="checkbox" id="chkWhatsapp">
+      Enviar registro por WhatsApp
+    </label>
 
-  <div class="form-row">
-    <div class="inputs-col">
-      <input type="text" inputmode="numeric" placeholder="Monto" id="monto" class="small-input" />
-      <input type="text" placeholder="Detalle" id="detalle" class="small-input" />
+    <div class="form-row">
+      <div class="inputs-col">
+        <input type="text" inputmode="numeric" placeholder="Monto" id="monto" class="small-input" />
+        <input type="text" placeholder="Detalle" id="detalle" class="small-input" />
+      </div>
+
+      <div class="button-box">
+        <button id="btnIngreso" class="btn ingreso">Ingreso</button>
+        <button id="btnGasto" class="btn gasto">Gasto</button>
+      </div>
     </div>
+  </section>
 
-    <div class="button-box">
-      <button id="btnIngreso" class="btn ingreso">Ingreso</button>
-      <button id="btnGasto" class="btn gasto">Gasto</button>
+  <!-- HISTORIAL -->
+  <section class="section-box">
+    <h2>Historial</h2>
+
+    
+
+    <div class="tabla">
+      <div class="tabla-header">
+        <span>Fecha</span>
+        <span>Tipo</span>
+        <span>Detalle</span>
+        <span>Monto</span>
+      </div>
+      <ul id="historial" class="tabla-body"></ul>
     </div>
-  </div>
-</section>
+    <!-- PAGINACIÓN -->
+<div class="pagination">
+  <button id="btnPrev">◀ Semana anterior</button>
+  <span id="lblSemana"></span>
+  <button id="btnNext">Semana siguiente ▶</button>
+</div>
+  </section>
 
-    <section class="section-box">
-  <h2>Historial</h2>
+</main>
 
-  <div class="tabla">
-    <div class="tabla-header">
-      <span>Fecha</span>
-      <span>Tipo</span>
-      <span>Detalle</span>
-      <span>Monto</span>
-    </div>
+<script type="module" src="firebase.js"></script>
+<script type="module" src="app.js"></script>
 
-    <ul id="historial" class="tabla-body"></ul>
-  </div>
-</section>
-
-  </main>
-
-  <script type="module" src="firebase.js"></script>
-  <script type="module" src="app.js"></script>
-
-  <script>
+<script>
   if ("serviceWorker" in navigator && location.protocol === "https:") {
     navigator.serviceWorker.register("sw.js").catch(()=>{});
   }
