--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
 <!-- HEADER -->
 <header class="header">
   <div class="header-inner">
-    <img src="logo.png" class="logo" alt="Logo" />
-    <h1 class="title">Balance de Caja</h1>
+    <div class="header-left">
+      <img src="logo.png" class="logo" alt="Logo" />
+    </div>
+
+    <div class="header-center">
+      <h1 class="title">Balance de Caja</h1>
+    </div>
   </div>
 </header>
 
